# thanhtra

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  README.md  README.vi.md  SECURITY.md  pyproject.toml
.github/workflows/: gate.yml  validate.yml
docs/en/: contributing.md  installation.md  maintenance.md  rules.md  usage.md
docs/vi/: contributing.md  installation.md  maintenance.md  rules.md  usage.md
examples/github-actions/: thanhtra.yml
scripts/: install.sh  integration_score.py  maintain.sh  sync-skills.sh  validate-fixtures.py  validate-fixtures.sh  validate-integration.sh  validate-pre-scan.py  validate-pre-scan.sh  validate-sarif.py  validate-sarif.sh  validate-sast.py  validate-sast.sh  validate-skill.sh  validate-tests.sh  validate-trust.py  validate-trust.sh  validate-version.sh
skills/antigravity/thanhtra/: SKILL.md
skills/antigravity/thanhtra/references/: language-detection.md  output-format.md
skills/antigravity/thanhtra/workflows/: large-review-sequential.md  small-review.md
skills/antigravity/vbs-scan-security/: SKILL.md
skills/codex/.agents/plugins/: marketplace.json
skills/codex/thanhtra/: SKILL.md
skills/codex/thanhtra/references/: language-detection.md  output-format.md  sub-agent-prompts.md
skills/codex/thanhtra/references/i18n/: en.md
skills/codex/thanhtra/scripts/: thanhtra-pre-scan.py
skills/codex/thanhtra/workflows/: large-review-sequential.md
skills/codex/vbs-scan-security/: SKILL.md
skills/codex/vbs-scan-security/workflows/: large-review-sequential.md
skills/thanhtra/: SKILL.md
skills/thanhtra/references/: data-flow-classification.md  language-detection.md  sub-agent-prompts.md
skills/thanhtra/references/i18n/: vi.md
skills/thanhtra/rules/languages/: README.md
skills/thanhtra/workflows/: large-review.md
tests/: expected-findings.json  test_prescan.py  test_sarif.py  test_triage.py  test_trust.py  trust-baseline.json
tests/fixtures/negative/command-injection-python/: app.py
tests/fixtures/negative/command-injection-shell/: setup.sh
tests/fixtures/negative/command-injection-shell-heredoc/: render-clip.sh
thanhtra/: __init__.py  cli.py
thanhtra/adapters/: __init__.py
thanhtra/core/: __init__.py  prescan.py  sarif.py  sast.py  triage.py  trust.py
(+64 files in other folders)
